--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
               <h2>dev.finance$</h4>
             </header>
         </div>
-            
+            <div class="container">
             <div class="main-box">
+            <div class="title">
                 <h3>Balanço</h3>
+            </div>
 
                 <div class="box">
                     <h4>Entradas</h4>
@@ -26,11 +28,12 @@
                     <h4>Saídas</h4>
                     <span>R$ 5.500</span>
                 </div>
-                <div class="box">
+                <div class="box total">
                     <h4>Total</h4>
                     <span>R$ 5.500</span>
                 </div>
             </div>
+        </div>
       </main>
     
   </body>
