creating the tables

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>dev.finances</title>
+    <title>dev.finance$</title>
   </head>
   <body>
       <main>
@@ -26,16 +26,32 @@
 
                 <div class="box">
                     <h4>Entradas</h4>
-                    <span>R$ 5.500</span>
+                    <span>R$ 5.000,00</span>
                 </div>
                 <div class="box">
                     <h4>Saídas</h4>
-                    <span>R$ 5.500</span>
+                    <span>R$ 3.000,00</span>
                 </div>
                 <div class="box total">
                     <h4>Total</h4>
-                    <span>R$ 5.500</span>
+                    <span>R$ 2.000,00</span>
                 </div>
+            </div>
+            <div class="table">
+              <h3>Transações</h3>
+
+              <table>
+                <tr>
+                  <th>Descrição</th>
+                  <th>Valor</th>
+                  <th>Data</th>
+                </tr>
+                <tr>
+                  <td>Luz</td>
+                  <td>- R$ 500,00</td>
+                  <td>23/01/2021</td>
+                </tr>
+              </table>
             </div>
         </div>
       </main>
