--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
                   <th>Data</th>
                 </tr>
                 <tr>
-                  <td>Luz</td>
-                  <td>- R$ 500,00</td>
+                  <td class="description">Luz</td>
+                  <td class="whitdraw">- R$ 500,00</td>
+                  <td>23/01/2021</td>
+                </tr>
+                <tr>
+                  <td class="description">Salário</td>
+                  <td class="deposit">R$ 500,00</td>
                   <td>23/01/2021</td>
                 </tr>
               </table>
