creating the footer

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
               <h3>Transações</h3>
 
               <table>
+                <thead>
                 <tr>
                   <th>Descrição</th>
                   <th>Valor</th>
                   <th>Data</th>
                 </tr>
+              </thead>
+              <tbody>
                 <tr>
                   <td class="description">Luz</td>
                   <td class="whitdraw">- R$ 500,00</td>
@@ -56,7 +59,11 @@
                   <td class="deposit">R$ 500,00</td>
                   <td>23/01/2021</td>
                 </tr>
+              </tbody>
               </table>
+              <footer>
+                <h4>dev.finance$</h4>
+              </footer>
             </div>
         </div>
       </main>
