creating the images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="header">
       <header>
-        <img src="./assets/logo.svg" alt="" />
+        <img src="./assets/logo.svg" alt="Logo image" />
       </header>
     </div>
 
@@ -30,14 +30,17 @@
         <div class="card">
           <h4>Entradas</h4>
           <span>R$ 5.000,00</span>
+          <img src="./assets/income.svg" alt="income" />
         </div>
         <div class="card">
           <h4>Saídas</h4>
           <span>R$ 3.000,00</span>
+          <img src="./assets/expense.svg" alt="outcome" />
         </div>
         <div class="card total">
           <h4>Total</h4>
           <span>R$ 2.000,00</span>
+          <img src="./assets/total.svg" alt="outcome" />
         </div>
       </section>
       <section id="transaction">
@@ -49,6 +52,7 @@
               <th>Descrição</th>
               <th>Valor</th>
               <th>Data</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -56,11 +60,13 @@
               <td class="description">Luz</td>
               <td class="whitdraw">- R$ 500,00</td>
               <td>23/01/2021</td>
+              <td><img src="./assets/minus.svg" alt="" /></td>
             </tr>
             <tr>
               <td class="description">Salário</td>
               <td class="deposit">R$ 500,00</td>
               <td>23/01/2021</td>
+              <td><img src="./assets/minus.svg" alt="" /></td>
             </tr>
           </tbody>
         </table>
