creating the sr-only

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="container">
       <section id="balance">
         <div class="title">
-          <h2>Balanço</h2>
+          <h2 class="sr-only">Balanço</h2>
         </div>
 
         <div class="card">
@@ -44,7 +44,7 @@
         </div>
       </section>
       <section id="transaction">
-        <h2>Transações</h2>
+        <h2 class="sr-only">Transações</h2>
 
         <table>
           <thead>
