fixing the iamges positions

--- a/index.html
+++ b/index.html
@@ -28,19 +28,25 @@
         </div>
 
         <div class="card">
-          <h4>Entradas</h4>
+          <h3>
+            <span>Entradas</span>
+            <img src="./assets/income.svg" alt="income" />
+          </h3>
           <span>R$ 5.000,00</span>
-          <img src="./assets/income.svg" alt="income" />
         </div>
         <div class="card">
-          <h4>Saídas</h4>
+          <h3>
+            <span>Saídas</span>
+            <img src="./assets/expense.svg" alt="outcome" />
+          </h3>
           <span>R$ 3.000,00</span>
-          <img src="./assets/expense.svg" alt="outcome" />
         </div>
         <div class="card total">
-          <h4>Total</h4>
+          <h3>
+            <span>Total</span>
+            <img src="./assets/total.svg" alt="outcome" />
+          </h3>
           <span>R$ 2.000,00</span>
-          <img src="./assets/total.svg" alt="outcome" />
         </div>
       </section>
       <section id="transaction">
@@ -73,7 +79,7 @@
       </section>
     </main>
     <footer>
-      <h4>dev.finance$</h4>
+      <h3>dev.finance$</h3>
     </footer>
   </body>
 </html>
