creating the new transaction buttom

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
 
+        <a href="#" class="button new">+ Nova Transação</a>
+
         <table>
           <thead>
             <tr>
