finishing the morning

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <a href="#" class="button new">+ Nova Transação</a>
 
-        <table>
+        <table class="data-table">
           <thead>
             <tr>
               <th>Descrição</th>
