starting the modal

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
         </table>
       </section>
     </main>
+
+    <div class="modal-overlay">
+      <div class="modal">
+        <div class="modal-content">Hello World</div>
+      </div>
+    </div>
     <footer>
       <h3>dev.finance$</h3>
     </footer>
