creating the modal

--- a/index.html
+++ b/index.html
@@ -81,7 +81,21 @@
 
     <div class="modal-overlay">
       <div class="modal">
-        <div class="modal-content">Hello World</div>
+        <div class="modal-content">
+          <h2>Nova Transação</h2>
+          <div class="input-box">
+            <input type="text" name="description" placeholder="Descrição" />
+            <input type="number" placeholder="0,00" />
+            <p>
+              Use o sinal - (negativo) para despesas e ,(vírgula) para as casas
+              decimais
+            </p>
+            <input type="date" />
+          </div>
+          <div class="button-box"></div>
+          <button>Cancelar</button>
+          <button>Salvar</button>
+        </div>
       </div>
     </div>
     <footer>
