styling the inputs and buttons

--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
             <input type="text" name="description" placeholder="Descrição" />
             <input type="number" placeholder="0,00" />
             <p>
-              Use o sinal - (negativo) para despesas e ,(vírgula) para as casas
+              Use o sinal - (negativo) para despesas e , (vírgula) para as casas
               decimais
             </p>
             <input type="date" />
           </div>
-          <div class="button-box"></div>
-          <button>Cancelar</button>
-          <button>Salvar</button>
+          <div class="button-box">
+            <button class="cancel">Cancelar</button>
+            <button class="save">Salvar</button>
+          </div>
         </div>
       </div>
     </div>
