creating the javascript

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
 
-        <a href="#" class="button new">+ Nova Transação</a>
+        <a href="#" class="button new" id="openModal">+ Nova Transação</a>
 
         <table class="data-table">
           <thead>
@@ -93,7 +93,7 @@
             <input type="date" />
           </div>
           <div class="button-box">
-            <button class="cancel">Cancelar</button>
+            <button class="cancel" id="closeModal">Cancelar</button>
             <button class="save">Salvar</button>
           </div>
         </div>
@@ -102,5 +102,6 @@
     <footer>
       <h3>dev.finance$</h3>
     </footer>
+    <script src="scripts.js"></script>
   </body>
 </html>
