--- a/index.html
+++ b/index.html
@@ -81,21 +81,27 @@
 
     <div class="modal-overlay">
       <div class="modal">
-        <div class="modal-content">
-          <h2>Nova Transação</h2>
-          <div class="input-box">
-            <input type="text" name="description" placeholder="Descrição" />
-            <input type="number" placeholder="0,00" />
-            <p>
-              Use o sinal - (negativo) para despesas e , (vírgula) para as casas
-              decimais
-            </p>
-            <input type="date" />
-          </div>
-          <div class="button-box">
-            <button class="cancel" id="closeModal">Cancelar</button>
-            <button class="save">Salvar</button>
-          </div>
+        <h2>Nova Transação</h2>
+        <div class="input-box">
+          <label class="sr-only">Descricão</label>
+          <input
+            type="text"
+            name="description"
+            id="description"
+            placeholder="Descrição"
+          />
+          <label class="sr-only">Número</label>
+          <input type="number" placeholder="0,00" />
+          <p>
+            Use o sinal - (negativo) para despesas e , (vírgula) para as casas
+            decimais
+          </p>
+          <label class="sr-only">Data</label>
+          <input type="date" />
+        </div>
+        <div class="button-box">
+          <button class="cancel" id="closeModal">Cancelar</button>
+          <button class="save">Salvar</button>
         </div>
       </div>
     </div>
