--- a/index.html
+++ b/index.html
@@ -82,27 +82,29 @@
     <div class="modal-overlay">
       <div class="modal">
         <h2>Nova Transação</h2>
-        <div class="input-box">
-          <label class="sr-only">Descricão</label>
-          <input
-            type="text"
-            name="description"
-            id="description"
-            placeholder="Descrição"
-          />
-          <label class="sr-only">Número</label>
-          <input type="number" placeholder="0,00" />
-          <p>
-            Use o sinal - (negativo) para despesas e , (vírgula) para as casas
-            decimais
-          </p>
-          <label class="sr-only">Data</label>
-          <input type="date" />
-        </div>
-        <div class="button-box">
-          <button class="cancel" id="closeModal">Cancelar</button>
-          <button class="save">Salvar</button>
-        </div>
+        <form action="">
+          <div class="input-box">
+            <label class="sr-only" for="description">Descricão</label>
+            <input
+              type="text"
+              name="description"
+              id="description"
+              placeholder="Descrição"
+            />
+            <label class="sr-only" for="number">Número</label>
+            <input type="number" name="number" id="number" placeholder="0,00" />
+            <p>
+              Use o sinal - (negativo) para despesas e , (vírgula) para as casas
+              decimais
+            </p>
+            <label class="sr-only" for="date">Data</label>
+            <input type="date" name="date" id="date" />
+          </div>
+          <div class="button-box">
+            <button class="cancel" id="closeModal">Cancelar</button>
+            <button class="save" type="submit">Salvar</button>
+          </div>
+        </form>
       </div>
     </div>
     <footer>
