finish the card expenses

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
             <span>Entradas</span>
             <img src="./assets/income.svg" alt="income" />
           </h3>
-          <span>R$ 5.000,00</span>
+          <span class="depositAmount">R$ 0,00</span>
         </div>
         <div class="card">
           <h3>
             <span>Saídas</span>
             <img src="./assets/expense.svg" alt="outcome" />
           </h3>
-          <span>R$ 3.000,00</span>
+          <span class="outcomeAmount">R$ 0,00</span>
         </div>
         <div class="card total">
           <h3>
             <span>Total</span>
             <img src="./assets/total.svg" alt="outcome" />
           </h3>
-          <span>R$ 2.000,00</span>
+          <span class="totalAmount">R$ 0,00</span>
         </div>
       </section>
       <section id="transaction">
