--- a/index.html
+++ b/index.html
@@ -61,20 +61,7 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td class="description">Luz</td>
-              <td class="whitdraw">- R$ 500,00</td>
-              <td>23/01/2021</td>
-              <td><img src="./assets/minus.svg" alt="" /></td>
-            </tr>
-            <tr>
-              <td class="description">Salário</td>
-              <td class="deposit">R$ 500,00</td>
-              <td>23/01/2021</td>
-              <td><img src="./assets/minus.svg" alt="" /></td>
-            </tr>
-          </tbody>
+          <tbody id="tbody"></tbody>
         </table>
       </section>
     </main>
